trunk/Archive2/6a/816a6829c206f2/output
main.cpp:15:53: error: elaborated type refers to a typedef
                 std::is_base_of<Base, T>::value,std::true_type>::type>
                                                                  ^
main.cpp:20:2: note: in instantiation of default argument for 'MyTemplate<Child>' required here
        MyTemplate<Child> a;//ok
        ^~~~~~~~~~~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/type_traits:1904:19: note: declared here
    { typedef _Tp type; };
                  ^
main.cpp:15:53: error: elaborated type refers to a typedef
                 std::is_base_of<Base, T>::value,std::true_type>::type>
                                                                  ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/type_traits:1904:19: note: declared here
    { typedef _Tp type; };
                  ^
2 errors generated.
